@@ -33,6 +33,7 @@ foreach test {
     {-stipple gray50 gray50 xyz {bitmap "xyz" not defined}}
     {-tags {test a b c} {test a b c} {} {}}
     {-text xyz xyz {} {}}
+    {-underline 0 0 xyz {expected integer but got "xyz"}}
     {-width 6 6 xyz {bad screen distance "xyz"}}
 } {
     lassign $test name goodValue goodResult badValue badResult
@@ -401,7 +402,7 @@ test canvText-9.15 {TextInsert procedure: cursor doesn't move} {
     .c dchars test 7 9
     .c index test insert
 } {5}
-    
+
 test canvText-10.1 {TextToPoint procedure} {
     .c coords test 0 0
     .c itemconfig test -text 0 -anchor center
@@ -430,7 +431,7 @@ test canvText-13.1 {TranslateText procedure} {
     .c move all 10 10
     .c coords test
 } {110.0 110.0}
-    
+
 .c itemconfig test -text "abcdefghijklmno" -anchor nw
 .c select from test 5
 .c select to test 8
@@ -479,7 +480,7 @@ test canvText-17.1 {TextToPostscript procedure} {
     .c delete all
     .c config -height 300 -highlightthickness 0 -bd 0
     update
-    .c create text 100 100 -tags test 
+    .c create text 100 100 -tags test
     .c itemconfig test -font $font -text "00000000" -width [expr 3*$ax]
     .c itemconfig test -anchor n -fill black
     set x [.c postscript]
@@ -560,7 +561,7 @@ test canvText-19.1 {patch 1006286, leading space caused wrap under Win32} {
         + ([font measure {Arial 28 bold} "Y"] / 2)}]
     set y1 [expr {18 + ($metrics(-linespace) / 2)}]
     set y2 [expr {160 + ($metrics(-linespace) / 2)}]
-    
+
     lappend results [$c index tbox1 @$x,$y1]
     lappend results [$c index tbox2 @$x,$y2]
 
